--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,5 +19,9 @@
     </div>
     <input type=submit value=Upload>
 </form>
-<a href="/uploads" target="_blank">Uploaded files</a>
+<ul>
+{% for file in files %}
+    <li><a href="{{ file.url }}" target="_blank">{{ file.filename }}</a></li>
+{% endfor %}
+<ul/>
 {% endblock %}
