--- a/app/templates/files_list.html
+++ b/app/templates/files_list.html
@@ -1,5 +1,8 @@
 <ul>
     {% for file in files %}
-    <li><a href="{{ file.url }}" target="_blank">{{ file.filename }}</a></li>
+    <li>
+        <a href="{{ file.url }}" target="_blank">{{ file.filename }}</a>&nbsp;
+        <span style='font-size: 0.8em; color: gray'>{{ file.created_at.strftime('%d %b %H:%M') }}</span>
+    </li>
     {% endfor %}
 </ul>
