--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,5 +12,5 @@
     </p>
     {{ upload_form.submit }}
 </form>
-{% include 'files_list.html' %}
+{% include 'episodes_list.html' %}
 {% endblock%}
