--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{% block title %}Podcast hosting{% endblock %}</title>
-        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
-    </head>
-    <body>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <ul class=flashes>
-                {% for category, message in messages %}
-                    <li>[{{category}}]&nbsp;{{ message }}</li>
-                {% endfor %}
-                </ul>
-                <hr>
-            {% endif %}
-        {% endwith %}
-        {% block body %}{% endblock %}
-    </body>
+
+<head>
+    <title>{% block title %}Podcast hosting{% endblock %}</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
+</head>
+
+<body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <ul class=flashes>
+        {% for category, message in messages %}
+        <li>[{{category}}]&nbsp;{{ message }}</li>
+        {% endfor %}
+    </ul>
+    <hr>
+    {% endif %}
+    {% endwith %}
+    <a href="{{ feed_url }}" target="_blank">Feed</a>
+    {% block body %}{% endblock %}
+</body>
+
 </html>
