Change title in base tml template

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>{% block title %}Podcast hosting{% endblock %}</title>
+    <title>{% block title %}Audeeo{% endblock %}</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
 </head>
 
