--- a/audeeo/templates/base.html
+++ b/audeeo/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>{% block title %}Audeeo{% endblock %}</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/png">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}" />
 </head>
 
 <body>
