add `Logout` link

--- a/audeeo/templates/base.html
+++ b/audeeo/templates/base.html
@@ -19,6 +19,7 @@
     {% endif %}
     {% endwith %}
     <a href="{{ feed_url }}" target="_blank">Feed</a>
+    <a href="{{ url_root }}/logout">Logout</a>
     {% block body %}{% endblock %}
 </body>
 
