--- a/audeeo/templates/base.html
+++ b/audeeo/templates/base.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}" />
 </head>
 
+<script>
+    // Prevent form resubmitting when page is refreshed
+    if (window.history.replaceState) {
+        window.history.replaceState(null, null, window.location.href);
+    }
+</script>
+
 <body>
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
