--- a/audeeo/templates/index.html
+++ b/audeeo/templates/index.html
@@ -1,15 +1,36 @@
 {% extends 'base.html' %}
 {% block body %}
+
+<div class='feed-info'>
+    <h3>Feed info</h3>
+    <form method="POST">
+        {{ feed_info_form.hidden_tag() }}
+        <div>
+            {{ feed_info_form.title.label }}&nbsp;
+            {{ feed_info_form.title(value=feed.title) }}
+            {% for error in feed_info_form.title.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ feed_info_form.description.label }}&nbsp;
+            {% set _ = feed_info_form.description.process_data(feed.description) %}
+            {{ feed_info_form.description(rows=3, cols=50, class='resize_none') }}
+            {% for error in feed_info_form.description.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+        {{ feed_info_form.submit }}
+    </form>
+</div>
 <h1>Upload file</h1>
 <form method="POST" enctype="multipart/form-data">
     {{ upload_form.hidden_tag() }}
-    <p>
-        {{ upload_form.file.label }}<br>
-        {{ upload_form.file(accept='audio/*') }}<br>
-        {% for error in upload_form.file.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
+    {{ upload_form.file.label }}<br>
+    {{ upload_form.file(accept='audio/*') }}<br>
+    {% for error in upload_form.file.errors %}
+    <span style="color: red;">[{{ error }}]</span>
+    {% endfor %}
     {{ upload_form.submit }}
 </form>
 {% include 'episodes_list.html' %}
