--- a/audeeo/templates/index.html
+++ b/audeeo/templates/index.html
@@ -3,13 +3,14 @@
 
 <div class='feed-info'>
     <h3>Feed info</h3>
+    <img src="{{ feed.artwork() }}">
     <form method="POST">
         {{ feed_info_form.hidden_tag() }}
         <div>
             {{ feed_info_form.title.label }}&nbsp;
             {{ feed_info_form.title(value=feed.title) }}
             {% for error in feed_info_form.title.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+            <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </div>
         <div>
@@ -17,7 +18,7 @@
             {% set _ = feed_info_form.description.process_data(feed.description) %}
             {{ feed_info_form.description(rows=3, cols=50, class='resize_none') }}
             {% for error in feed_info_form.description.errors %}
-                <span style="color: red;">[{{ error }}]</span>
+            <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </div>
         {{ feed_info_form.submit }}
